# idl-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: v1-readiness-gate.yml
fixtures/v1-gate/: idl.graph.json
idl-audit/: Cargo.toml
idl-audit/src/: lib.rs
idl-audit/tests/: integration_tests.rs
idl-cli/: Cargo.toml
idl-cli/src/: diagnostic_formatter.rs  exit_codes.rs  graph_build.rs  main.rs  output.rs  proposals.rs
idl-cli/src/commands/: change.rs  drift.rs  emit.rs  extract.rs  init.rs  interview.rs  ledger.rs  mod.rs  parse.rs  perspective.rs  prompts.rs  proposals.rs  propose.rs  status.rs  validate.rs  validate_anchors.rs  validate_schema.rs
idl-cli/tests/: cli.rs  perspective_test.rs  prompts_test.rs  proposals_test.rs  propose_test.rs  status_drift_gate_test.rs
idl-cli/tests/fixtures/: broken.idl  ok.idl  test-graph.json
idl-core/: Cargo.toml
idl-core/src/: ast.rs  drift.rs  error.rs  lib.rs  parser.rs  semantic.rs
idl-emitters/: Cargo.toml
idl-emitters/src/: go_api.rs  lib.rs  node_api.rs  python_api.rs  rust_api.rs  traits.rs
idl-emitters/src/graph/: mod.rs  openapi.rs  python.rs  rust.rs  typescript.rs
idl-emitters/tests/: graph_emitters.rs
idl-extractors/: Cargo.toml
idl-extractors/src/: dart.rs  javascript.rs  lib.rs  php.rs  traits.rs  typescript.rs
idl-extractors/tests/: discriminator_tests.rs  w22_behavior_classification_tests.rs  w22_nested_traversal_tests.rs
idl-ffi/: Cargo.toml  README.md  SWIFT_BRIDGE_PLAN.md
idl-ffi/src/: lib.rs
idl-graph/: Cargo.toml
idl-graph/src/: doc.rs  drift.rs  edge.rs  extensions_dto.rs  extensions_when.rs  graph.rs  kind.rs  lib.rs  loss.rs  node.rs  provenance.rs  state.rs  validate.rs
idl-graph/tests/: extensions_dto.rs  round_trip.rs
idl-interview/: Cargo.toml  EXAMPLE.md
idl-interview/.idl/: ai-run.jsonl
idl-interview/fixtures/demo-todo-app/: round-1.json  round-2.json  round-3.json  round-4.json  round-5.json
idl-interview/src/: accept.rs  lib.rs  prompts.rs  runner.rs  session.rs  validate.rs
idl-interview/tests/: runner_tests.rs
idl-ledger/: Cargo.toml
idl-ledger/src/: decision.rs  evidence.rs  index.rs  lib.rs  question.rs  storage.rs  tests_decision.rs  tests_question.rs  tests_storage.rs  tests_validate.rs  validate.rs
idl-llm/: Cargo.toml
idl-llm/src/: lib.rs  mock.rs  openai.rs  tools.rs
idl-mcp-server/: Cargo.toml
idl-mcp-server/changes/: 20260502183620-change2.proposal.json  audit.jsonl
idl-mcp-server/src/: lib.rs  main.rs  server.rs
idl-mcp-server/tests/: proposals_test.rs
idl-proposals/: Cargo.toml
idl-proposals/src/: lib.rs
idl-proposals/tests/: round_trip.rs
idl-typeexpr/: Cargo.toml
idl-typeexpr/src/: lib.rs  parser.rs  render.rs  types.rs
idl-typeexpr/tests/: roundtrip.rs
