[package]
name = "idl-audit"
version.workspace = true
edition = "2021"
authors = ["Barton <barton@intentional.dev>"]
description = "AI run audit logging for IDL mutations"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3.0"
