[package]
name = "idl-emitters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "IDL code emitters for target languages (Node, Go, Python, Rust)"

[dependencies]
idl-core = { path = "../idl-core" }
idl-graph = { path = "../idl-graph" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde_yaml = "0.9"
