[package]
name = "idl-extractors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "IDL extractors for brownfield codebases (TS, Dart, PHP, JS)"

[dependencies]
idl-core = { path = "../idl-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
