[package]
name = "idl-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI bindings for Swift/SwiftUI macOS Workbench"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
idl-core = { path = "../idl-core" }
idl-graph = { path = "../idl-graph" }
anyhow = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
