[package]
name = "idl-interview"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-round greenfield interview runtime that produces proposed kernel graph deltas."

[dependencies]
idl-audit = { path = "../idl-audit" }
idl-graph = { path = "../idl-graph" }
idl-llm = { path = "../idl-llm" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = { workspace = true }
tokio = { workspace = true }
