[package]
name = "idl-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Read-only MCP (Model Context Protocol) server exposing the IDL semantic graph to LLM agents"

[lib]
name = "idl_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "idl-mcp-server"
path = "src/main.rs"

[dependencies]
idl-graph = { path = "../idl-graph" }
idl-proposals = { path = "../idl-proposals" }
rmcp = { version = "1.6", features = ["server", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3.10"
