[package]
name = "idl-proposals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "IDL proposal management library — create, list, accept, reject structured change requests"

[dependencies]
idl-graph = { path = "../idl-graph" }
idl-audit = { path = "../idl-audit" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
sha2 = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
